--- a/client/index.html
+++ b/client/index.html
@@ -19,16 +19,19 @@
     <div class="container">
       <input id="brandName" type="text" placeholder="Sök efter varumärke.." name="brand" required>
       <input id="productName" type="text" placeholder="Sök efter produkt.." name="productName" required>
-      <input id= "saveBtn" type="submit" value="Sök">
+
+      <input type="url" name="url" id="image" placeholder="CAI101_1.webp" pattern="CAI101_1.webp" size="30" required>
+    </div>
+
+    <div class="btnContainer">
+      <input id= "saveBtn" type="submit" value="Spara">
       <input id= "productBtn" type="submit" value="Visa produkt">
+    </div>
+
     </div>
 
     <div id="makeupData">
 
-    </div>
-
-    <div id="loadApi">
-      
     </div>
 
     <div id="makeupApi">
